feat:added balance layer for users & bulk add event types/prediction outcomes
